deployment-api.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "blazorgke-api"
  namespace: "default"
  labels:
    app: "blazorgke-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "blazorgke-api"
  template:
    metadata:
      labels:
        app: "blazorgke-api"
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "api"
        dapr.io/app-port: "8080"
    spec:
      containers:
      - name: "blazorgke-api-sha256-1"
        image: "us-central1-docker.pkg.dev/firstgke-418008/gke-image-repository/blazorgke-api"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
