deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "webapp"
  namespace: "default"
  labels:
    app: "webapp"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "webapp"
  template:
    metadata:
      labels:
        app: "webapp"
    spec:
      containers:
      - name: "webapp-sha256-1"
        image: "us-central1-docker.pkg.dev/firstgke-418008/gke-image-repository/webapp"
