service-mesh-deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "blazorgke-api"
  namespace: "default"
  labels:
    app: "blazorgke-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "blazorgke-api"
  template:
    metadata:
      labels:
        app: "blazorgke-api"
    spec:
      containers:
      - name: "blazorgke-api-sha256-1"
        image: "gcr.io/testblazorapp-417308/blazor-api:latest"
        ports:
            - containerPort: 8080
---
